# gnostr-core

./: .codespellrc  .dockerignore  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  COMMAND  Cargo.toml  Dockerfile  GIT-VERSION-FILE  GNUmakefile  README.md  build.rs  cargo.mk  chat.mk  cli.patch  docker.mk  gnostr.mk  go.mk  maintainers.yaml  ncli.mk  pi.mk  post-event.patch  rust-toolchain.toml  secp256k1  subst.patch  venv.mk
.github/workflows/: CICD.yml  CheckScripts.yml  FixPR.yml  GnuTests.yml  android.yml  build.yml  c-cpp.yml  code-quality.yml  freebsd.yml  fuzzing.yml  gh-release.yml  ghcr.io.yml  gnostr-alpine.yml  gnostr-bot.yml  gnostr-docker.yml  gnostr.yml  go-release.yml  nostril.yml  pre-release.yml  release.yml  rust-gh-deploy.yml
benches/: pipe.rs  throughput.rs
bindings/nostr-ffi/bindings-android/lib/: build.gradle.kts
bindings/nostr-sdk-ffi/bindings-android/lib/: build.gradle.kts
bins/: .gitignore  .gitmodules  Cargo.toml  GNUmakefile  README.md  config.toml
bins/.github/workflows/: cargo-build.yml  gnostr-docker.yml  jekyll-gh-pages.yml
bins/.gnostr/: reflog
bins/src/: blockheight.rs  gitminer.rs  handler.rs  internal.rs  lib.rs  reflog_simple.rs  relays.rs  repo.rs  router.rs  serve.rs  watch_list.rs  weeble.rs  wobble.rs  worker.rs
bins/tests/: first-gnostr-commit.json
cat/: .gitignore  Cargo.toml  GNUmakefile  README.md
cat/.github/workflows/: cargo-build.yml  rust.yml
cat/src/: all_peers.rs  broadcast_reuse_peer.rs  crypto_peer.rs  file_peer.rs  foreachmsg_peer.rs  help.rs  http_peer.rs  http_serve.rs  jsonrpc_peer.rs  lengthprefixed_peer.rs  lib.rs  line_peer.rs  lints.rs  main.rs  mirror_peer.rs  my_copy.rs  net_peer.rs  options.rs  primitive_reuse_peer.rs  process_peer.rs  prometheus_peer.rs  readdebt.rs  reconnect_peer.rs  sessionserve.rs  socks5_peer.rs  specifier.rs  specparse.rs  ssl_peer.rs  stdio_peer.rs  stdio_threaded_peer.rs  timestamp_peer.rs  transform_peer.rs  trivial_peer.rs  unix_peer.rs  unix_seqpacket_peer.rs  util.rs  wasm_transform_peer.rs  windows_np_peer.rs  ws_client_peer.rs  ws_lowlevel_peer.rs  (+2 more)
cat/tests/: test.rs
chat/: GNUmakefile  main.go  ui.go
d/: Cargo.toml  Dockerfile  GNUmakefile  cargo.mk  fly.toml
d/src/: main.rs  protocol.rs
desktop/: CMakeLists.txt
devtools/: refresh-submodules.sh
doc/: gnostr-act.1  gnostr-bits.1  gnostr-blockheight.1  gnostr-cat.1  gnostr-cli.1  gnostr-client.1  gnostr-db-cli.1  gnostr-db.1  gnostr-get-relays.1  gnostr-git-log.1  gnostr-git-reflog.1  gnostr-git.1  gnostr-keyconv.1  gnostr-modal.1  gnostr-nip.1  gnostr-post-event.1  gnostr-post.1  gnostr-proxy.1  gnostr-relays.1  gnostr-send.1  gnostr-set-relays.1  gnostr-sha256.1  gnostr-tui.1  gnostr-weeble.1  gnostr-wobble.1  gnostr.1
examples/: replication.rs
examples-nodejs/: pnpm-lock.yaml
ext/: secp256k1-0.3.2
ext/curl-8.5.0/: CMakeLists.txt  GNUmakefile
gnostr/: .gitmodules  Cargo.toml  Makefile  build.rs  cmake_install.cmake  nostril.c
gnostr/doc/: nostril.1
gnostrd/: Cargo.toml  fly.mk
gnostrd/src/: main.rs
go/: Dockerfile  GNUmakefile  go.mod  go.sum
gui/: Cargo.toml
jj/: Cargo.toml  build.rs
jj/src/: cli_util.rs
lib/: Cargo.toml
lib/testutils/: Cargo.toml
logs/: 1000_-205.txt  1000_-250.txt  1000_-253.txt  100_2.txt  360_1.txt
lookup/: .gitignore  Cargo.toml  cargo.mk
lookup/src/: main.rs
src/: gnostr-pi.c  gnostr.c  lib.rs  pi.c  wss_client.cc
src/uu/bech32/: Cargo.toml  bech32.md
src/uu/bech32/src/: bech32.rs  main.rs
src/uu/bech32_to_any/: Cargo.toml
src/uu/bech32_to_any/src/: bech32_to_any.rs  main.rs
src/uu/blockheight/: Cargo.toml
src/uu/blockheight/src/: blockheight.rs  main.rs
src/uu/cli/: Cargo.toml
src/uu/cli/src/: cli.rs  main.rs
src/uu/encrypt_privkey/: Cargo.toml  encrypt_privkey.md
src/uu/encrypt_privkey/src/: encrypt_privkey.rs  main.rs  rpassword.rs
src/uu/get_relays/: Cargo.toml  get_relays.md
src/uu/get_relays/src/: get_relays.rs  main.rs
src/uu/git/: Cargo.toml  git.md
src/uu/git/src/: git.rs  main.rs
src/uu/hashsum/: hashsum.md
src/uu/hashsum/src/: hashsum.rs
src/uu/keypair/: Cargo.toml  keypair.md
src/uu/keypair/src/: keypair.rs  main.rs
src/uu/legit/: Cargo.toml  legit.md
src/uu/legit/src/: legit.rs  main.rs
src/uu/nip11/: Cargo.toml
src/uu/nip11/src/: main.rs  nip11.rs
src/uu/post/: Cargo.toml
src/uu/post-event/: Cargo.toml  post-event.md
src/uu/post-event/src/: main.rs  post_event.rs
src/uu/post/src/: main.rs  post.rs
src/uu/privkey_to_bech32/: Cargo.toml  privkey_to_bech32.md
src/uu/privkey_to_bech32/src/: main.rs  privkey_to_bech32.rs
src/uu/pubkey_to_bech32/: Cargo.toml  pubkey_to_bech32.md
src/uu/pubkey_to_bech32/src/: main.rs  pubkey_to_bech32.rs
src/uu/qr/: Cargo.toml  qr.md
src/uu/qr/src/: main.rs  qr.rs
src/uu/reflog/: Cargo.toml  reflog.md
src/uu/reflog/src/: main.rs  reflog.rs
src/uu/template/src/: template.rs
src/uu/tui/: Cargo.toml  cli.md  tui.md
src/uu/weeble/: Cargo.toml  weeble.md
src/uu/weeble/src/: blockheight.rs  main.rs  weeble.rs
src/uu/wobble/: Cargo.toml  wobble.md
src/uu/wobble/src/: main.rs  wobble.rs
src/uu/xq/: Cargo.toml  xq.md
template/: gnostr-count  gnostr-get-relays  gnostr-init  gnostr-nip  gnostr-parse-git-config  gnostr-post  gnostr-reflog-test  gnostr-set-relays  gnostr-syndicate
tests/: _util.rs  basic.rs  js_interop.rs  tests.rs
tests/by-util/: test_bech32.rs
tui/: Cargo.toml  GNUmakefile  cargo.mk
tui/.github/workflows/: ci.yml
tui/asyncgit/: Cargo.toml
tui/asyncgit/src/: lib.rs
tui/asyncgit/src/sync/: commit_filter.rs
tui/filetreelist/: Cargo.toml
tui/filetreelist/src/: lib.rs
tui/git2-hooks/: Cargo.toml
tui/git2-testing/: Cargo.toml
tui/invalidstring/: Cargo.toml
tui/scopetime/: Cargo.toml
tui/src/: app.rs  main.rs  queue.rs  strings.rs
tui/src/components/: branchlist.rs
tui/src/keys/: key_list.rs
tui/src/tabs/: mod.rs  status.rs  welcome.rs
util/: show-utils.BAT  show-utils.sh
web/: CMakeLists.txt  gnostr-web-deploy
xq/: Cargo.toml
xq/crates/lang/: Cargo.toml
(+5 files in other folders)
