[workspace]
[package]
name = "gnostr"
version = "0.0.44"
license = "Apache-2.0"
rust-version = "1.76"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr"
documentation = "https://github.com/gnostr"
categories = ["version-control", "development-tools", "gnostr", "nostr"]
keywords = ["git", "gnostr", "nostr"]
description = "git+nostr workflow utility"
authors = ["gnostr <admin@gnostr.org>","Mike Dilger <mike@mikedilger.com>", "DanConwayDev <DanConwayDev@protonmail.com>", "Max Inden <mail@max-inden.de>","fiatjaf <fiatjaf@gmail.com>", "Nate Levin <natelevincycling@gmail.com>", "Nethanja Focking <nethanja@nethanja.de>", "Daniele Tonon <tonon@vitamino.it>", "jeremyd (@jeremyd)"]

exclude = [".github", "deps", "scripts", "docs"]

[build-dependencies]
cc = { version = "1.0.98", features = ["libc"] }
include_dir = { version = "0.7.3", features = ["glob", "metadata"] }
markdown = { version = "1.0.0-alpha.17", features = ["json", "log", "serde"] }

[dependencies]
cc = "1.0.98"
include_dir = { version = "0.7.3", features = ["glob", "metadata"] }
markdown = { version = "1.0.0-alpha.17", features = ["json", "log", "serde"] }
