[package]
name = "gnostr"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }

authors = ["gnostr <admin@gnostr.org>","Mike Dilger <mike@mikedilger.com>", "DanConwayDev <DanConwayDev@protonmail.com>", "Max Inden <mail@max-inden.de>","fiatjaf <fiatjaf@gmail.com>", "Nate Levin <natelevincycling@gmail.com>", "Nethanja Focking <nethanja@nethanja.de>", "Daniele Tonon <tonon@vitamino.it>", "jeremyd (@jeremyd)"]

exclude = [".github", "deps", "scripts", "docs"]
include = ["nostril"]

[build-dependencies]
cc = { version = "1.0.98", features = ["libc"] }
include_dir = { version = "0.7.3", features = ["glob", "metadata"] }
markdown = { version = "1.0.0-alpha.17", features = ["json", "log", "serde"] }

[dependencies]
cc = "1.0.98"
include_dir = { version = "0.7.3", features = ["glob", "metadata"] }
markdown = { version = "1.0.0-alpha.17", features = ["json", "log", "serde"] }

# The profile that 'cargo dist' will build with
#[profile.dist]
#inherits = "release"
#lto = "thin"
