[package]
name = "jj-cli"
description = "gnostr: a git+nostr workflow utility."
## default-run = "gnostr"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }

## command pass through
[[bin]]
name = "jj"
path = "src/main.rs"

## git gnostr-jj
[[bin]]
name = "git-gnostr-jj"
path = "src/main.rs"

## gnostr## command handler
[[bin]]
name = "gnostr"
path = "../gnostr/src/bin/gnostr.rs"

## git gnostr pass through
[[bin]]
name = "git-gnostr"
path = "../gnostr/src/bin/gnostr.rs"

## [[bin]]
## name = "gnostr-gui"
## path = "../gui/src/main.rs"

## git gnostr-gui
[[bin]]
name = "git-gnostr-gui"
path = "../gui/src/main.rs"

## ## git-legit## [[bin]]
## name = "git-legit"
## path = "../bins/src/bin/gnostr-legit.rs"


[[bin]]
name = "fake-editor"
path = "testing/fake-editor.rs"
#required-features = ["test-fakes"]

[[bin]]
name = "fake-diff-editor"
path = "testing/fake-diff-editor.rs"
#required-features = ["test-fakes"]

[[test]]
name = "runner"

[build-dependencies]
cargo_metadata = { workspace = true }
cc = { version = "1.0.98", features = ["libc"] }
include_dir = { version = "0.7.3", features = ["glob", "metadata"] }
markdown = { version = "1.0.0-alpha.17", features = ["json", "log", "serde"] }

[dependencies]

async-recursion = "1.0"
async-trait = "0.1"
base64 = "0.21"
bech32 = "0.9"
cc = "1.0.98"

chrono = { workspace = true }
clap = { workspace = true }
clap-markdown = { workspace = true }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }
clap_mangen = { workspace = true }
config = { workspace = true }
criterion = { workspace = true, optional = true }
crossterm = { workspace = true }
dashmap = "5.4"
dirs = { workspace = true }
#dirs = "5.0"
eframe = { git = "https://github.com/mikedilger/egui", rev = "538088439c7c507fe49c730eab84ddd85e147391", features = [ "persistence" ] }
egui-video = { features = ["from_bytes", "sdl2-bundled"], optional = true, version = "0.6.0" }
egui-winit = { git = "https://github.com/mikedilger/egui", rev = "538088439c7c507fe49c730eab84ddd85e147391", features = [ "default" ] }
egui_extras = { git = "https://github.com/mikedilger/egui", rev = "538088439c7c507fe49c730eab84ddd85e147391", features = [ "image", "svg" ] }
encoding_rs = "0.8"
esl01-renderdag = { workspace = true }
fallible-iterator = "0.2"
filetime = "0.2"
futures = { workspace = true }
#futures = "0.3"
futures-util = "0.3"
git2 = { workspace = true }
gix = { workspace = true }
gnostr-bins = { path = "../bins" }
gossip-relay-picker = { git = "https://github.com/mikedilger/gossip-relay-picker", rev = "271463fcca7dbce5c51f986dbbecbcaee3618dfb" }
heed = { git = "https://github.com/meilisearch/heed", rev = "02030e3bf3d26ee98d4f5343fc086a7b63289159" }
# gnostr-gui = { version = "0.0.29", path = "../gui", features = ["lang-cjk", "native-tls", "sdl2"] }
##gnostr-gui = { version = "0.0.29", path = "../gui", features = [ "egui-video", "lang-cjk", "native-tls", "sdl2", "video-ffmpeg"] }
##gnostr-gui = { version = "0.0.29", path = "../gui", features = ["lang-cjk", "native-tls", "sdl2"] }
hex = { workspace = true }
#hex = "0.4"
http = "0.2"
humansize = "2.1"
image = { version = "0.24.6", features = [ "png", "jpeg" ] }
include_dir = { version = "0.7.3", features = ["glob", "metadata"] }
indexmap = { workspace = true }
itertools = { workspace = true }
jj-lib = { workspace = true }
kamadak-exif = "0.5"
lazy_static = "1.4"
linkify = "0.9"
maplit = { workspace = true }
markdown = { version = "1.0.0-alpha.17", features = ["json", "log", "serde"] }
memoize = "0.4"
mime = "0.3"
minus = { workspace = true }
nostr-types = { git = "https://github.com/mikedilger/nostr-types", rev = "7d37cf46acad0dc2771e539e3dd5cb0d28e02b16", features = [ "speedy" ] }
once_cell = { workspace = true }
parking_lot = "0.12"
paste = "1.0"
pest = { workspace = true }
pest_derive = { workspace = true }
pollster = { workspace = true }
qrcode = { git = "https://github.com/mikedilger/qrcode-rust", rev = "519b77b3efa3f84961169b47d3de08c5ddd86548" }
rand = "0.8"
regex = { workspace = true }
#regex = "1.8"
reqwest = { version = "0.11", default-features = false, features = ["brotli", "deflate", "gzip", "json"] }
rhai = { version = "1.15", features = [ "std", "sync" ] }
rpassword = { workspace = true }
#rpassword = "7.2"
rusqlite = { version = "0.29", features = ["bundled", "chrono", "serde_json"] }
scm-record = { workspace = true }
sdl2 = { version = "0.35.2", features = ["bundled"], optional = true }
serde = { workspace = true }
#serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
slab = { workspace = true }
speedy = { git = "https://github.com/mikedilger/speedy", rev = "b8b713a7006958616dd3ef3ba63217740b4b09c2" }
strsim = { workspace = true }
tempfile = { workspace = true }
textwrap = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3", features = [ "formatting", "macros" ] }
timeago = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.19", default-features = false, features = [ "connect", "handshake" ] }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }
#tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = [ "std", "env-filter" ] }
tungstenite = { version = "0.19", default-features = false }
unicode-width = { workspace = true }
url = "2.4"
vecmap-rs = "0.1"
zeroize = "1.6"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
async-trait = { workspace = true }
indoc = { workspace = true }
insta = { workspace = true }
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-1483256987
jj-cli = { path = ".", features = ["test-fakes"], default-features = false }
test-case = { workspace = true }
testutils = { workspace = true }
#jj-cli = { path = ".", features = ["test-fakes"] }

[features]
default = ["watchman"]
bench = ["dep:criterion"]
packaging = []
test-fakes = ["jj-lib/testing"]
vendored-openssl = ["git2/vendored-openssl", "jj-lib/vendored-openssl"]
watchman = ["jj-lib/watchman"]

[package.metadata.binstall]
# The archive name is jj, not jj-cli. Also, `cargo binstall` gets
# confused by the `v` before versions in archive name.
pkg-url = "{ repo }/releases/download/v{ version }/jj-v{ version }-{ target }.{ archive-format }"


