[package]
name = "gnostr-lookup"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }

[dependencies]
ansi_term = "0.12.1"
async-std = { version = "1.12.0", features = ["attributes"] }
env_logger = "0.10.1"
futures = "0.3.30"
libp2p = { version = "0.52.1", default-features = false, features = ["dns", "async-std", "noise", "tcp", "yamux", "identify", "kad", "ping", "relay", "rsa", "macros", "secp256k1", "ecdsa", "websocket"] }
libp2p-mplex = "0.40"
libp2p-quic = { version = "0.8.0-alpha", features = ["async-std"] }
log = "0.4"
#libp2p-quic = { git = "https://github.com/libp2p/rust-libp2p", branch = "master", version = "0.8.0-alpha", default-features = false, features = ["async-std"] }
#libp2p-mplex = { git = "https://github.com/libp2p/rust-libp2p", branch = "master", version = "0.40", default-features = false }
structopt = "0.3.26"
thiserror = "1"
