[package]
name = "asyncgit"
authors = ["extrawurst <mail@rusticorn.com>"]
description = "allow using git2 in a asynchronous context"
readme = "README.md"
categories = ["concurrency", "asynchronous"]

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }

[dependencies]
bitflags = "1"
crossbeam-channel = "0.5"
easy-cast = "0.5"
fuzzy-matcher = "0.3"
git2 = "^0.18"
git2-hooks = { path = "../git2-hooks" }
log = "0.4"
# git2 = { path = "../../extern/git2-rs", features = ["vendored-openssl"]}
# git2 = { git="https://github.com/extrawurst/git2-rs.git", rev="fc13dcc", features = ["vendored-openssl"]}
# pinning to vendored openssl, using the git2 feature this gets lost with new resolver
openssl-sys = { version = '0.9', features = ["vendored"], optional = true }
rayon = "1.8"
rayon-core = "1.11"
scopetime = { path = "../scopetime" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
unicode-truncate = "0.2.0"
url = "2.5"

[dev-dependencies]
env_logger = "0.10"
invalidstring = { path = "../invalidstring" }
pretty_assertions = "1.4"
serial_test = "1.0"
tempfile = "3.4"

[features]
default = ["trace-libgit"]
trace-libgit = []
vendor-openssl = ["openssl-sys"]
