[package]
name = "git2-hooks"
authors = ["extrawurst <mail@rusticorn.com>"]
description = "adds git hooks support based on git2-rs"
readme = "README.md"
categories = ["development-tools"]

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }

[dependencies]
git2 = ">=0.17"
log = "0.4"
shellexpand = "3.1"
thiserror = "1.0"

[dev-dependencies]
git2-testing = { path = "../git2-testing" }
pretty_assertions = "1.4"
tempfile = "3.4"
